# remindme

./: .gitignore  LICENSE  Makefile  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml
src/remindme/: __init__.py  __main__.py  backends.py  cli.py  models.py  parsers.py  utils.py
tests/: test_backends.py  test_cli.py  test_models.py  test_parsers.py  test_smoke.py  test_utils.py
